3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/button.c: explicit cast of stats.food to uint32 when used as sacrifice count.
common/image.c: strlen returns size_t. Remove unused FindFaceName.
common/object.c: obj::count is tag_t. Can't decrease item's nrof by a negative value.
include/libproto.h: fix prototypes.
include/player.h: weight and weight_limit are sint32, so last_ should be the same.
include/sproto.h: nrof is uint32, not int.
server/apply.c: nrof is uint32, can't eat a negative number of items. obj::count is tag_t.
server/c_misc.c: remove unused variable.
server/c_object.c: use uint32 instead of int to specify number of items to drop/put.
server/plugins.c: strlen returns size_t.
server/spell_effect.c: distances are uint32 and not int.
socket/loop.c: remove now obsolete cast of -1 to uint32 for last_weight.
socket/request.c: explicit cast of weight_limit to sint32 when comparing to last_weight.
Ryo 2005-10-01

plugin/plugin_python.c: added CF[SG]etWeightLimit.
plugin/include/plugin_python.h: function prototypes.
server/plugins.c: update player inventory if item teleporter from that.
Ryo 2005-09-30

lib/collect.pl.in: can now use lines like "attacktype fire electricity poison" instead
 of hard to remember numbers. Numbers are still supported, you can even mix both.
Ryo 2005-09-28

server/spell_effect.c: In recharge() verify that the object to charge is in
   fact a wand or staff.
Andreas Kirschbaum 2005-09-27

Changed quest behaviour, now uses its own archetypes. Can change npc/magic ear
 text based on quest status.
Warning: not totally tested. Quest start/end works, rest needs some tweaks & fixes.
common/quest.c: new functions, some cleaning.